[package]
name = "porticus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
tokio = { version = "1.42.0", features = ["full"] }
tokio-serial = "5.4.4"
tokio-tungstenite = "0.25.0"
clap = { version = "4.4", features = ["derive"] }
directories = "5.0"
ctrlc = "3.4"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

[lib]
name = "porticus"
path = "src/lib.rs"

[[bin]]
name = "porticus"
path = "src/main.rs"